src/components/search/search.module.css
@value typo-body__secondary from "@atb/theme/typography.module.css";

.container {
  --height: 2.75rem;
  min-width: 20rem;
  max-width: 30rem;
  display: flex;
  position: relative;
  border-radius: token('border.radius.regular');
  background-color: token('color.background.neutral.0.background');
  box-shadow: inset 0 0 0 token('border.width.slim')
    token('color.foreground.dynamic.disabled');
}
.container:focus-within {
  outline: 0;
  box-shadow: inset 0 0 0 token('border.width.slim')
    token('color.interactive.2.outline.background');
}

.container:not(:only-child):first-child {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.container:not(:only-of-type):nth-child(2) {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
}

.container:not(:only-child):first-child:focus-within .menu {
  top: calc(100%);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.label {
  composes: typo-body__secondary;
  height: var(--height);
  min-width: 3rem;
  display: flex;
  align-items: center;
  padding: token('spacing.small');
  border-bottom-left-radius: 0.75rem;
  border-top-left-radius: 0.75rem;
  color: token('color.foreground.dynamic.secondary');
  margin-left: token('spacing.xSmall');
}

.inputContainer {
  flex-grow: 1;
}

.input {
  height: var(--height);
  padding: token('spacing.small');
  border: none;
  background: none;
  width: 100%;
  border-radius: 0;
  color: token('color.foreground.dynamic.primary');
  outline: 0;
}

.input::placeholder {
  color: token('color.foreground.dynamic.secondary');
  opacity: 1;
}

.menu {
  width: 100%;
  background-color: token('color.background.neutral.0.background');
  border-radius: 0.75rem;
  border: token('border.width.slim') solid token('color.background.neutral.3.background');
  position: absolute;
  top: calc(100% + token('spacing.xSmall'));
  overflow: hidden;
  max-height: 20rem;
  overflow-y: auto;
  z-index: 100;
  padding: token('spacing.medium');
  border: token('border.width.slim') solid
    token('color.background.neutral.3.background');
}
.menu:empty {
  display: none;
}

.item {
  padding: token('spacing.medium');
  display: flex;
  align-items: center;
  gap: token('spacing.medium');
  cursor: pointer;
}

.item:has(> .menuHeading) {
  margin-top: token('spacing.small');
}

.menuHeading {
  composes: typo-body__secondary;
}

.itemHighlighted {
  color: token('color.interactive.2.hover.foreground.primary');
  background-color: token('color.interactive.2.hover.background');
  outline: token('border.width.medium') solid
    token('color.interactive.2.outline.background');
  border-radius: token('border.radius.small');
}

.itemIcon {
  display: flex;
  align-items: center;
}

.itemInfo {
  display: flex;
  flex-direction: column;
}

.itemName {
  font-weight: bold;
}

.itemLocality {
  composes: typo-body__secondary;
}

@media (max-width: 650px) {
  .container {
    max-width: 100%;
  }
}

